--- a/p3-weather-journal-app/weathar-app-client/style.css
+++ b/p3-weather-journal-app/weathar-app-client/style.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Hind+Siliguri|Josefin+Sans:700|Overpass&display=swap');
 
 body {
-  /* background: rgb(63, 94, 251); */
-  background: #99b898;
-  background: radial-gradient(circle, #99b898 0%, #2a363b 100%);
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   margin-left: 10%;
   margin-right: 10%;
@@ -22,13 +19,17 @@ body {
 }
 
 #app {
-  background: #eceae0;
+  margin: 30px auto;
+  padding: 2rem 1.25rem;
+  position: relative;
+  background-color: #fff;
+  margin-bottom: 3rem;
+  z-index: 999;
+  box-shadow: 2px 5px 6px 6px rgba(0, 0, 0, 0.3), 9px 11px 11px 0 rgba(0, 0, 0, 0.4);
   color: black;
   grid-gap: 1em;
   font-size: 20px;
   font-family: 'Hind Siliguri', sans-serif;
-  border: 6px solid black;
-  border-radius: 5%;
   line-height: 2.5em;
 }
 
@@ -37,12 +38,11 @@ body {
 }
 
 .entry {
-  width: 80%;
+  width: 60%;
   margin: 20px auto;
   grid-area: ent;
-  padding: 30px 20px 100px 20px;
-  border: 2px solid black;
-  background-color: #e9c92d;
+  padding: 9px 35px 92px 19px;
+  box-shadow: 2px 5px 6px 6px rgba(0, 0, 0, 0.3), 9px 11px 11px 0 rgba(0, 0, 0, 0.4);
 }
 
 #entryHolder {
@@ -87,55 +87,57 @@ body {
 }
 
 .title {
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 30px;
-  color: #3b4a6b;
+  font-family:sans-serif;
+  font-size: 23px;
+  color: #3B4B71;
 }
 
 label {
   display: block;
-  font-size: 27px;
+  font-size: 18px;
+  font-weight: 600;
   color: #221e1d;
   text-align: center;
 }
 
 input {
-  display: block;
-  height: 60px;
-  width: 320px;
-  background: whitesmoke;
-  color: firebrick;
-  font-size: 20px;
-  font-family: 'Overpass', sans-serif;
-  border: 1px solid black;
-  padding-left: 5px;
-  text-align: center;
-  margin: 0 auto;
+    display: block;
+    height: 32px;
+    width: 180px;
+    border-radius: 5px;
+    background: whitesmoke;
+    color: #000;
+    font-size: 16px;
+    font-family: 'Overpass', sans-serif;
+    border: 1px solid black;
+    padding-left: 5px;
+    text-align: center;
+    margin: 0 auto;
 }
 
 button {
-  width: 400px;
-  height: 100px;
-  background: #3b4a6b;
-  color: #2b8039;
-  font-size: 26px;
+  width: 300px;
+  height: 50px;
+  border-radius: 10px;
+  background: #3B4873;
+  font-size: 23px;
   font-family: 'Overpass', sans-serif;
   border: none;
   box-shadow: 2px 4px 5px #444;
 }
 
 h1 {
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 50px;
+  font-family:sans-serif;
+  font-size: 33px;
   color: #221e1d;
 }
 
 textarea {
   background: whitesmoke;
-  color: firebrick;
-  padding-left: 5px;
-  font-size: 20px;
-  font-family: 'Overpass', sans-serif;
+  color: dimgrey;
+  padding: 5px;
+  font-size: 15px;
+  font-family:sans-serif;
   border: 1px solid black;
 }
 /* Reset style for HTML element on active to have no border*/
