--- a/p4-evaluate-a-news-article-with-nlp/src/client/views/index.html
+++ b/p4-evaluate-a-news-article-with-nlp/src/client/views/index.html
@@ -23,7 +23,7 @@
 
         <main>
             <section>
-                <form class="" onsubmit="return handleSubmit(event)">
+                <form class="" onsubmit="return Client.handleSubmit(event)">
                     <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
                     <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
@@ -38,6 +38,15 @@
         <footer>
             <p>This is a footer</p>
         </footer>
-
+     
+     <script>
+            // Check that service workers are supported
+            if ('serviceWorker' in navigator) {
+                // Use the window load event to keep the page load performant
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/service-worker.js');
+                });
+            }
+        </script> 
     </body>
 </html>
