--- a/p7-FEND-Capstone-Travel-app/src/public/styles/style.scss
+++ b/p7-FEND-Capstone-Travel-app/src/public/styles/style.scss
@@ -5,7 +5,7 @@ body {
 .hero {
   height: 100vh;
 
-  background: url('../assets/images/ny.jpg');
+  background: url('../media/images/evening.jpg');
 
   background-position: center;
   background-repeat: no-repeat;
