--- a/p7-FEND-Capstone-Travel-app/src/public/view/index.html
+++ b/p7-FEND-Capstone-Travel-app/src/public/view/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Travel App!</title>
+  <title>Travel-App</title>
 </head>
 
 <body>
@@ -15,22 +15,22 @@
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img src="" width="30" height="30" class="d-inline-block align-top" alt="">
-        Travel App
+        Travel-app
       </a>
     </nav>
   </header>
   <main>
     <div class="container-fluid p-0">
-      <section class="hero">
+      <section class="main">
         <div class="caption jumbotron jumbotron-fluid">
           <div class="container search">
-            <h1 class="display-1 text-center">Travel</h1>
+            <h1 class="text-center header">Travel-Planner</h1>
             <div class="row">
-             <input type="text" id="city" placeholder="City" aria-label="City" class="form-control col-md-3 mt-1">
-              <input type="date" id="date_start" aria-label="Date" class="form-control col-sm-6 col-md-3 mt-1">
-              <input type="date" id="date_end" aria-label="Date" class="form-control col-sm-6 col-md-3 mt-1">
+             <input type="text" id="city" placeholder="City" aria-label="City" class="form-control col-md-12 mt-1">
+              <input type="date" id="date_start" aria-label="Date" class="form-control col-md-12 mt-1">
+              <input type="date" id="date_end" aria-label="Date" class="form-control col-md-12 mt-1">
               <!-- <div class="input-group-append col-md-1"> -->
-                <button class="btn btn-secondary col-md-2 mt-1" type="button" id="button_search">Search</button>
+                <button class="btn btn-secondary col-md-12 mt-1" type="button" id="button_search">Search</button>
               <!-- </div> -->
             </div>
           </div>
