--- a/p7-FEND-Capstone-Travel-app/src/public/styles/style.scss
+++ b/p7-FEND-Capstone-Travel-app/src/public/styles/style.scss
@@ -1,17 +1,30 @@
 body {
   height: 100%;
 }
-
-.hero {
+.navbar-brand{
+  color: #02b3e4 !important;
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.header{
+  font-size: 4rem;
+  color: #fff;
+  font-weight: 600;
+}
+.main {
   height: 100vh;
-
   background: url('../media/images/evening.jpg');
-
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+#button_search{
+  text-align: center;
+}
+.search {
+  width: 50%
+}
 .caption {
   background-color: transparent;
   width: 100%;
@@ -33,7 +46,16 @@ body {
   width: 75px;
   height: auto;
 }
-
+@media (max-width: 980px) {
+  .header {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 600px) {
+  .search {
+    width: 100%
+  }
+}
 @media screen and (min-width: 576px) {
   .jumbotron {
     padding: 8rem 2rem;
