--- a/p7-FEND-Capstone-Travel-app/src/public/view/index.html
+++ b/p7-FEND-Capstone-Travel-app/src/public/view/index.html
@@ -45,7 +45,7 @@
               <div class="modal-body">
                 <div class="container-fluid">
                   <div class="media row">
-                    <img src="" class="images mr-3 col-12 col-lg-5" alt="Popular Images from Trip Location">
+                    <img src="" class="images mr-3 col-12 col-lg-5" alt="Popular Images from Trip city">
                     <div class="media-body col-12 col-lg-7">
                       <h4 class="mt-0">Trip to: <span class="media_heading"></span></h4>
                       <h6 class="mt-0">Departure: <span class="media_heading"></span></h6>
