--- a/p7-FEND-Capstone-Travel-app/src/public/view/index.html
+++ b/p7-FEND-Capstone-Travel-app/src/public/view/index.html
@@ -19,6 +19,7 @@
   <main>
     <div class="container-fluid p-0">
       <section class="main">
+
         <div class="caption jumbotron jumbotron-fluid">
           <div class="container search">
             <h1 class="text-center header">Travel-Planner</h1>
@@ -32,6 +33,8 @@
             </div>
           </div>
         </div>
+
+       
         <div class="modal fade" id="tripModal" tabindex="-1" role="dialog" aria-labelledby="tripModalTitle"
           aria-hidden="true">
           <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
@@ -45,7 +48,7 @@
               <div class="modal-body">
                 <div class="container-fluid">
                   <div class="media row">
-                    <img src="" class="images mr-3 col-12 col-lg-5" alt="Popular Images from Trip city">
+                    <img src="" class="images mr-3 col-12 col-lg-5" alt="Popular Images from Trip Location">
                     <div class="media-body col-12 col-lg-7">
                       <h4 class="mt-0">Trip to: <span class="media_heading"></span></h4>
                       <h6 class="mt-0">Departure: <span class="media_heading"></span></h6>
