--- a/p7-FEND-Capstone-Travel-app/src/client/view/index.html
+++ b/p7-FEND-Capstone-Travel-app/src/client/view/index.html
@@ -68,7 +68,12 @@
           </div>
         </div>
       </section>
-      <!-- <section class="trips"></section> -->
+      <section>
+         <div class="row trips-con">
+
+         </div>
+
+      </section>
     </div>
   </main>
 
