--- a/p7-FEND-Capstone-Travel-app/src/client/styles/style.scss
+++ b/p7-FEND-Capstone-Travel-app/src/client/styles/style.scss
@@ -2,12 +2,15 @@ body {
   height: 100%;
 }
 
-.trips-con{
+.trips-container{
   width: 100%;
   display: flex;
-  margin: 0 auto;
-  padding: .5rem;
+  margin: 5px auto;
   background-color: cadetblue;
+}
+.trips-container .col-md-4 {
+  padding: 20px 0px !important;
+  
 }
 .trip_title {
   color: deepskyblue;
@@ -30,9 +33,10 @@ body {
   font-weight: 600;
 }
 .main {
-  margin: auto;
-    width: 70%;
-    height: 65vh;
+  margin: 20px auto;
+  width: 70%;
+  height: 75vh;
+  border-radius: 100px;
   background: url('../media/images/evening.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -40,9 +44,13 @@ body {
 }
 #button_search{
   text-align: center;
+  background-color: cadetblue !important;
 }
 .search {
-  width: 80%
+  width: 65%;
+  background: rgba(59, 11, 40, 0.6);
+ border-radius: 25px;
+ height: 275px;
 }
 .caption {
   background-color: transparent;
@@ -61,7 +69,8 @@ body {
 }
 @media (max-width: 600px) {
   .search {
-    width: 100%
+    width: 100%;
+    height: 255px;
   }
 }
 @media screen and (min-width: 576px) {
