--- a/p7-FEND-Capstone-Travel-app/src/client/view/index.html
+++ b/p7-FEND-Capstone-Travel-app/src/client/view/index.html
@@ -50,11 +50,11 @@
                   <div class="media row">
                     <img src="" class="images mr-3 col-12 col-lg-5" alt="Popular Images from Trip Location">
                     <div class="media-body col-12 col-lg-7">
-                      <h4 class="mt-0">Trip to: <span class="media_heading"></span></h4>
-                      <h6 class="mt-0">Departure: <span class="media_heading"></span></h6>
-                      <h6 class="mt-0">Return: <span class="media_heading"></span></h6>
-                      <h6 class="mt-0">Duration: <span class="media_heading"></span></h6>
-                      <span class="trip_countdown"></span>
+                      <h4 class="mt-0">Trip to: <span class="media_heading" style="color:crimson"></span></h4>
+                      <h6 class="mt-0">Departure: <span class="media_heading" style="color:crimson"></span></h6>
+                      <h6 class="mt-0">Return: <span class="media_heading" style="color:crimson"></span></h6>
+                      <h6 class="mt-0">Duration: <span class="media_heading" style="color:crimson"></span></h6>
+                      <span class="trip_countdown" ></span>
                       <span class="trip_weather"></span>
                     </div>
                   </div>
@@ -67,7 +67,9 @@
             </div>
           </div>
         </div>
+        
       </section>
+
       <section>
          <div class="row trips-container">
 
