--- a/p3-Weather-journal-app/website/style.css
+++ b/p3-Weather-journal-app/website/style.css
@@ -62,3 +62,89 @@ body {
 	color: firebrick;
 	font-weight: bolder;
 }
+
+.headline {
+	grid-area: hd;
+	padding-left: 30px;
+}
+
+.zip {
+	grid-area: zip;
+}
+
+.feel {
+	grid-area: feeling;
+}
+
+.generate-button {
+	grid-area: add;
+}
+
+#generate {
+	color: whitesmoke;
+	cursor: pointer;
+}
+
+.title {
+	font-family: sans-serif;
+	font-size: 23px;
+	color: #3b4b71;
+}
+
+label {
+	display: block;
+	font-size: 18px;
+	font-weight: 600;
+	color: #221e1d;
+	text-align: centryer;
+}
+
+input {
+	display: block;
+	height: 32px;
+	width: 180px;
+	border-radius: 5px;
+	background: whitesmoke;
+	color: #000;
+	font-size: 16px;
+	font-family: "Overpass", sans-serif;
+	border: 1px solid black;
+	padding-left: 5px;
+	text-align: centryer;
+	margin: 0 auto;
+}
+
+button {
+	width: 300px;
+	height: 50px;
+	border-radius: 10px;
+	background: #3b4873;
+	color: aliceblue;
+	font-size: 23px;
+	font-family: "Overpass", sans-serif;
+	border: none;
+	box-shadow: 2px 4px 5px #444;
+}
+
+h1 {
+	font-family: sans-serif;
+	font-size: 33px;
+	color: #221e1d;
+}
+
+textarea {
+	background: whitesmoke;
+	color: dimgrey;
+	padding: 5px;
+	font-size: 15px;
+	font-family: sans-serif;
+	border: 1px solid black;
+}
+
+/* Reset style for HTML elementry on active to have no border*/
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+	outline: none;
+}
